--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			.ribbon {
 			  background-color: #a00;
 			  overflow: hidden;
-				position: absolute;
+				position: fixed;
 				  left: -2.8em;
 				  bottom: 2.5em;
 				  -moz-transform: rotate(45deg);
