Ribbon rotation in any browser supporting css3 transform.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				position: fixed;
 				  left: -2.8em;
 				  bottom: 2.5em;
+				  transform: rotate(45deg);
 				  -moz-transform: rotate(45deg);
 				  -webkit-transform: rotate(45deg);			  
 			}
