Adds data source link.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 			<option value="isbn">ISBN:llä</option>
 		</select>
 		<input type="text" id="search" />
+		<p>Tietolähde: <a href="http://data.kirjastot.fi">data.kirjastot.fi</a></p>
 		<iframe id="frame" src="about:blank" frameborder="0"></iframe>
 		<div class="ribbon">
 			<a href="http://github.com/avuori/Kirjastohaku" rel="me">Fork me on GitHub</a>
